# KillerHub-Next

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: vulnerable_lab.py
killerhub/: __init__.py  cli.py  crawler.py  enumeration.py  http.py  lab.py  models.py  report.py  scanner.py  web.py
killerhub/checks/: __init__.py  sqli.py  xss.py
