[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "killerhub-next"
version = "0.1.0"
description = "Authorized web vulnerability scanner for XSS and SQL Injection learning labs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "flask>=3.0.0",
    "requests>=2.31.0",
    "rich>=13.7.0",
]

[project.scripts]
killerhub = "killerhub.cli:main"
